# panefit

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
cli/: __init__.py  __main__.py
integrations/: __init__.py
integrations/mcp/: __init__.py  server.py
integrations/tmux/: __init__.py  panefit.tmux  provider.py  reflow.py
integrations/tmux/scripts/: panefit.sh
panefit/: __init__.py  analyzer.py  config.py  layout.py  session.py  types.py
panefit/llm/: __init__.py  base.py  manager.py
panefit/providers/: __init__.py  base.py  generic.py  tmux.py
